[gd_scene load_steps=6 format=3 uid="uid://cyvi5lxine81"]

[ext_resource type="Script" path="res://main/Arkanoid/game/player_escena/control.gd" id="1_3ijcm"]
[ext_resource type="Script" path="res://main/Arkanoid/game/player_escena/player.gd" id="2_yvadx"]
[ext_resource type="PackedScene" uid="uid://dpn5ayiwwopj" path="res://main/Arkanoid/game/ball_escena/ball.tscn" id="3_tx5jv"]
[ext_resource type="Texture2D" uid="uid://b0g7cv6652nkj" path="res://main/Arkanoid/arte/pngs/pala_arkanoid.png" id="4_yc6u0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hpbr6"]
size = Vector2(299, 45.7142)

[node name="control" type="Node2D"]
scale = Vector2(0.35, 0.35)
script = ExtResource("1_3ijcm")

[node name="player" type="CharacterBody2D" parent="."]
collision_layer = 3
collision_mask = 3
script = ExtResource("2_yvadx")

[node name="ball" parent="player" instance=ExtResource("3_tx5jv")]
position = Vector2(0, -50)

[node name="Sprite2D" type="Sprite2D" parent="player"]
texture = ExtResource("4_yc6u0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="player"]
position = Vector2(-0.5, 0.00012207)
shape = SubResource("RectangleShape2D_hpbr6")

[connection signal="start" from="player" to="." method="_on_player_start"]
[connection signal="hit_brick" from="player/ball" to="." method="_on_ball_hit_brick"]
